# specflux

./: .env.example  .env.staging.example  .gitignore  .lintstagedrc.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  hello-world.test.ts  index.html  package-lock.json  package.json  run.sh  tailwind.config.js  vite.config.ts
.claude/: .mcp.json  settings.json
.claude/agents/: backend-dev.md  frontend-dev.md  fullstack-dev.md
.claude/commands/: api-spec-update.md  build-prod.md  db-migrate.md  epic.md  implement.md  prd.md  task.md  test-all.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-preview.yml  release.yml
.husky/: pre-commit  pre-push
docs/: ARCHITECTURE.md
docs/design/: ai_mock.html  prd-epic-roadmap-redesign.md  prd-task-detail-page-redesign.md  terminal-panel-prd.md
docs/research/: mock.html  (+14 more)
frontend/: .env.example  CLAUDE.md  UI_STYLE_GUIDE.md  package.json  run.sh  tailwind.config.js  tsconfig.json  vitest.config.ts
openapi/: .api-version  api.yaml
orchestrator/: .eslintrc.json  .gitignore  CLAUDE.md  eslint.config.mjs  jest.config.js  openapitools.json  package.json  tsconfig.json
scripts/: sync-api.js
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.preview.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/pty/: manager.rs  session.rs
(+466 files in other folders)
