[package]
name = "specflux"
version = "0.1.0"
description = "AI-powered project orchestration for multi-repo development"
authors = ["SpecFlux Team"]
edition = "2021"

[lib]
name = "specflux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-oauth = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY support for native terminal
portable-pty = "0.8"
tokio = { version = "1", features = ["full", "sync"] }
parking_lot = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
